# Tailored_Task_Tracker

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTORS  Dockerfile  LICENSE  MANIFEST.in  README.md  build.sh  clean.sh  cypress.config.js  cypress.env.json  docker-compose.yml  notes.txt  package-lock.json  package.json  pyproject.toml  run.py  run.sh  test.sh
.github/workflows/: ci.yml
db/init/: finance_tracker.mwb  schema.sql  seed-demo.sql  seed.sql
docs/: business-day-schedule.md  index.md
scripts/: build.sh  clean.sh  run.sh  test.sh
src/dashboard/: __init__.py  config.py
src/dashboard/models/: __init__.py  step.py  task.py  user.py
src/dashboard/routes/: __init__.py  auth.py  comments.py  dashboard.py  due_dates.py  steps.py  tasks.py
src/dashboard/schemas/: __init__.py  auth_schemas.py
src/dashboard/services/: __init__.py  due_date.py  user_service.py
src/dashboard/static/css/: styles.css
src/dashboard/static/html/: _login_modal.html  _reset_modal.html  _signup_modal.html  (+1 more)
src/dashboard/templates/: _user_menu.html  admin.html  base.html  dashboard.html  settings.html
src/dashboard/utils/: __init__.py  exceptions.py  responses.py
tests/backend/: conftest.py
tests/backend/models/: test_user_model.py
tests/backend/routes/: test_auth.py  test_dashboard.py
tests/backend/schemas/: test_validators.py
tests/backend/services/: test_due_date_engine.py  test_monthly_due_dates.py  test_user_service.py
tests/backend/utils/: test_responses.py
tests/e2e/: auth.cy.js
tests/e2e/support/: e2e.js
tests/frontend/: test.js
(+6 files in other folders)
