[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerline-dashboard"
version = "0.1.0"
description = "St. Luke’s month-end process tracker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography",
    "Flask",
    "Flask-SQLAlchemy",
    "Flask-Bcrypt",
    "Flask-Cors",
    "Flask-Login",
    "pydantic[email]",
    "PyMySQL",
    "workalendar>=17.0.0",
    "gunicorn",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "coverage>=7.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0"
]

# src-layout
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dashboard*"]
exclude = ["tests*", "scripts*", "examples*", "db*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
